# learn-opengl

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
src/base-project/: CMakeLists.txt  main.cpp
src/coordinate-systems/: CMakeLists.txt  MyShader.cpp  MyShader.h  main.cpp  resources.conf
src/coordinate-systems/shaders/: coordsystemsShader.frag  coordsystemsShader.vert
src/shaders/: CMakeLists.txt  MyShader.cpp  MyShader.h  main.cpp
src/textures/: CMakeLists.txt  MyShader.cpp  MyShader.h  main.cpp  resources.conf
src/transformations/: CMakeLists.txt  MyShader.cpp  MyShader.h  main.cpp  resources.conf
src/transformations/shaders/: transformationsShader.frag  transformationsShader.vert
src/triangle/: CMakeLists.txt  MyShader.cpp  MyShader.h  main.cpp
